Fixed scaling
I forgot to change the padding to make sure the header doesn't cover the body

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,5 @@
 body{
-    padding-top: 100px;
+    padding-top: max(100px, 10vh);
 }
 
 .header {
